removed the fixed countryInput width, it will now be 40% on desktop and 100% on mobile devices.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,8 +65,14 @@ body {
 
 .formWrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 10px 0;
+}
+
+.inputIconGroup {
+  display: flex;
+  width: 40%;
 }
 
 .fourth {
@@ -117,7 +123,7 @@ body {
 }
 
 .countryInput {
-  width: 300px;
+  width: 100%;
   height: 25px;
 }
 
